[WIP] website navigation and doc pages, markdown css

--- a/website/src/main/static/stylesheets/main.css
+++ b/website/src/main/static/stylesheets/main.css
@@ -11,6 +11,8 @@
 @import 'tailwindcss/utilities';
 @import './utilities.css';
 
+@import './markdown.css';
+
 @import './setup.css';
 
 /*noinspection CssUnknownTarget*/
