signal transitions example

--- a/website/site/src/main/static/stylesheets/main.css
+++ b/website/site/src/main/static/stylesheets/main.css
@@ -15,5 +15,4 @@
 
 @import './setup.css';
 
-/*noinspection CssUnknownTarget*/
-/*@import 'highlight.js/styles/stackoverflow-light.css';*/
+@import './markdown.css';
