--- a/website/site/src/main/static/html/index.html.ejs
+++ b/website/site/src/main/static/html/index.html.ejs
@@ -26,7 +26,9 @@
 <div id="app" class="antialiased"></div>
 <script type="text/javascript">
   document.addEventListener('DOMContentLoaded', function() {
-    window.laminext.App.start();
+    setTimeout(function () {
+      window.laminext.App.start();
+    }, 0)
   });
 </script>
 <div id="rcc-w">
