ThisEvents (and remove the old stuff), fetch, websocket updates

--- a/website/site/src/main/static/html/index.html.ejs
+++ b/website/site/src/main/static/html/index.html.ejs
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-<div id="app" class="antialiased"></div>
+<div id="app"></div>
 <script type="text/javascript">
   document.addEventListener('DOMContentLoaded', function() {
     setTimeout(function () {
