docs update and cleanup validation docs and example

--- a/website/site/src/main/static/stylesheets/markdown.css
+++ b/website/site/src/main/static/stylesheets/markdown.css
@@ -301,7 +301,7 @@
 .prose-custom code:not(.hljs) {
     @apply text-cool-gray-900;
     @apply font-medium;
-    @apply text-sm;
+    /*@apply text-sm;*/
     @apply bg-cool-gray-200;
 }
 
