--- a/website/src/main/static/html/index.html.ejs
+++ b/website/src/main/static/html/index.html.ejs
@@ -10,28 +10,11 @@
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png?v2" sizes="16x16">
     <link rel="manifest" href="/manifest.json?v2">
     <link rel="mask-icon" href="/images/safari-pinned-tab.svg?v2" color="#5bbad5">
-    <style type="text/css">
-        .hidden-before-css {
-            display: none;
-        }
-    </style>
-    <style type="text/css" id="no-js">
-        .hidden-if-no-js {
-            visibility: hidden;
-        }
-    </style>
+    <style type="text/css" id="no-js">.hidden-if-no-js { visibility: hidden; }</style>
 </head>
 
 <body>
-<div id="app"></div>
-<script type="text/javascript">
-  document.addEventListener('DOMContentLoaded', function() {
-    setTimeout(function () {
-      window.laminext.App.start();
-    }, 0)
-  });
-</script>
-<div id="rcc-w">
-</div>
+  <div id="app"></div>
+  <div id="rcc-w"></div>
 </body>
 </html>
