--- a/website/src/main/static/html/index.html.ejs
+++ b/website/src/main/static/html/index.html.ejs
@@ -4,17 +4,14 @@
     <title>laminext</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0"/>
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png?v2">
-    <link rel="icon" type="image/png" href="/images/favicon-32x32.png?v2" sizes="32x32">
-    <link rel="icon" type="image/png" href="/images/favicon-16x16.png?v2" sizes="16x16">
-    <link rel="manifest" href="/manifest.json?v2">
-    <link rel="mask-icon" href="/images/safari-pinned-tab.svg?v2" color="#5bbad5">
     <style type="text/css" id="no-js">.hidden-if-no-js { visibility: hidden; }</style>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
-  <div id="app"></div>
-  <div id="rcc-w"></div>
-</body>
+<body><div id="app"></div></body>
 </html>
