--- a/website/src/main/static/html/index.html.ejs
+++ b/website/src/main/static/html/index.html.ejs
@@ -11,6 +11,9 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <% if (htmlWebpackPlugin.options.mode === 'production') { %>
+    <script async defer data-domain="laminext.dev" src="https://plausible.io/js/plausible.js"></script>
+    <% } %>
 </head>
 
 <body><div id="app"></div></body>
