--- a/website/src/main/static/html/index.html.ejs
+++ b/website/src/main/static/html/index.html.ejs
@@ -13,5 +13,8 @@
     <meta name="theme-color" content="#ffffff">
     <% if (htmlWebpackPlugin.options.mode === 'production') { %><script async defer data-domain="laminext.dev" src="https://stats.laminext.dev/js/index.js"></script><% } %>
 </head>
-<body><div id="app"></div></body>
+<body>
+    <div id="app"></div>
+    <div id="menu-modal"></div>
+</body>
 </html>
