website update (frontroute 0.16)

--- a/website/src/main/static/stylesheets/main.css
+++ b/website/src/main/static/stylesheets/main.css
@@ -218,6 +218,10 @@ body {
     }
 
 
+    .btn-sm-outline-blue {
+        @apply btn btn-single btn-sm btn-outline-blue;
+    }
+
     .btn-lg-outline-blue {
         @apply btn btn-single btn-lg btn-outline-blue;
     }
