--- a/website/src/main/static/html/index.html.ejs
+++ b/website/src/main/static/html/index.html.ejs
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0"/>
     <style type="text/css" id="no-js">.hidden-if-no-js { visibility: hidden; }</style>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/v/0.15.x/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/v/0.15.x/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/v/0.15.x/favicon-16x16.png">
+    <link rel="manifest" href="/v/0.15.x/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <% if (htmlWebpackPlugin.options.mode === 'production') { %><script async defer data-domain="laminext.dev" src="https://stats.laminext.dev/js/index.js"></script><% } %>
