--- a/website/src/main/static/html/index.html.ejs
+++ b/website/src/main/static/html/index.html.ejs
@@ -11,7 +11,7 @@
     <link rel="manifest" href="/v/0.15.x/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <% if (htmlWebpackPlugin.options.mode === 'production') { %><script async defer data-domain="laminext.dev" src="https://stats.laminext.dev/js/index.js"></script><% } %>
+    <% if (htmlWebpackPlugin.options.mode === 'production') { %><script async defer data-domain="laminext.dev" src="/js/index.js"></script><% } %>
 </head>
 <body>
     <div id="app"></div>
